<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <!-- Username -->
    <EditText
        android:id="@+id/et_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/username"
        android:background="@drawable/bg_username"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableLeft="@drawable/user_icon"
        android:drawablePadding="5dp"
        android:maxLines="1"/>

    <!-- Password -->

    <!-- Radio Group 1 -->
    <EditText
        android:id="@+id/et_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/et_1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_username"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/rg_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/et_2"
        android:layout_marginTop="20dp">

        <!-- Radio Button -->
        <RadioButton
            android:id="@+id/rd_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="16sp"
            android:checked="true" />

        <!-- Radio Button -->
        <RadioButton
            android:id="@+id/rd_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"/>

    </RadioGroup>

    <!-- Radio Group 2 -->
    <RadioGroup
        android:id="@+id/rg_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/rg_1"
        android:layout_marginTop="20dp">

        <!-- TextView (Receive email?) -->
        <TextView
            android:id="@+id/tv_1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:padding="5dp"
            android:textColor="#000000"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <!-- Radio Button -->
        <RadioButton
            android:id="@+id/rd_3"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/yes"
            android:button="@null"
            android:textSize="16sp"
            android:background="@drawable/bg_radiobtn"
            android:checked="true"
            android:layout_marginLeft="5dp"/>

        <!-- Radio Button -->
        <RadioButton
            android:id="@+id/rd_4"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/no"
            android:button="@null"
            android:textSize="16sp"
            android:background="@drawable/bg_radiobtn"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Language: "
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@id/rg_2"
        android:layout_marginTop="20dp"/>

    <CheckBox
        android:id="@+id/ck_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="English"
        android:textSize="20sp"
        android:layout_below="@id/tv_2"/>

    <CheckBox
        android:id="@+id/ck_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chinese"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/ck_1"
        android:layout_below="@id/tv_2"/>

    <CheckBox
        android:id="@+id/ck_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Indo"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/ck_2"
        android:layout_below="@id/tv_2"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ck_1"
        android:layout_marginTop="20dp"
        android:text="Login"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:background="@drawable/bg_btn4"/>

</RelativeLayout>